force-app/main/default/objects/Product_Name__c/Product_Name__c.object-meta.xml
<CustomObject>
    <description>This object is created to store the products that we are going to use in the myOwnProject LWC.</description>
    <label>Product Name</label>
    <nameField>
        <label>Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>