force-app/main/default/objects/Product_Name__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>Used to store the images that we are going to use for the project using Documents(Classic)</description>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>