force-app/main/default/objects/Product_Name__c/fields/Pay_on_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Pay_on_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check whether the Product is eligible for Pay on Delivery.</description>
    <label>Pay on Delivery</label>
    <type>Checkbox</type>
</CustomField>