force-app/main/default/objects/Product_Name__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Used to showcase the ratings of the respective product in myOwnProject LWC.</description>
    <label>Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>