force-app/main/default/objects/Product_Name__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used to determine the type of the product</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobiles</fullName>
            </value>
            <value>
                <fullName>Laptops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>